<resources>
    <string name="app_name">taskmasterVer2</string>
    <string name="Task_Title">Task Title</string>
    <string name="add_task">Add Task</string>
    <string name="task_title">Task Title</string>
    <string name="task_description">Task Description</string>
    <string name="total_tasks_0">Total tasks : 0</string>
    <string name="back">back</string>
    <string name="placeholder">placeholder</string>
    <string name="all_tasks">all tasks</string>
    <string name="my_tasks">My Tasks</string>
    <string name="problem_solving">Problem Solving</string>
    <string name="critical_thinking">Critical Thinking</string>
    <string name="time_management">Time Management</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textview">TextView</string>
    <string name="task_state">task_state</string>
    <string name="submit">submit</string>
    <string name="task_state0">Task State</string>
</resources>